# pycommon

./: .editorconfig  .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
litefeel/pycommon/: __init__.py  color.py  command.py  data.py  ftp.py  hash.py  io.py  math.py  misc.py  os.py
test/: color_test.py  ftp_test.py  io_test.py  version_test.py
tests/: color_test.py  version_test.py
