[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["litefeel"]

[project]
name = "litefeel-pycommon"
version = "0.4.17"
dependencies = [
  "openpyxl",
]
requires-python = ">=3.10"
authors = [
  {name = "litefeel", email = "litefeel@gmail.com"},
]
description = "my python common lib"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["lib"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "http://github.com/litefeel/pycommon"
Repository = "http://github.com/litefeel/pycommon.git"
"Bug Tracker" = "http://github.com/litefeel/pycommon/issues"


[tool.black]
line-length = 100
