[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["litefeel"]

[project]
name = "litefeel-pycommon"
version = "0.4.17"
dependencies = [
  "openpyxl",
]
requires-python = ">=3.11"
authors = [
  {name = "litefeel", email = "litefeel@gmail.com"},
]
description = "my python common lib"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["lib"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15"
]

[project.urls]
Homepage = "https://github.com/litefeel/pycommon"
Repository = "https://github.com/litefeel/pycommon.git"
"Bug Tracker" = "https://github.com/litefeel/pycommon/issues"


[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
norecursedirs = [".git", ".github", ".pytest_cache", "__pycache__", "pytest-cache-files-*"]
